drivers: rtc: Add frdm k64f rtc driver
This patch implements frdm k64f rtc driver based on mcux sdk. Yaml and
fixup files are added to support device tree. dts files are modified for
configurations.

convert_datetime_to_seconds() and convert_seconds_to_datetime() are
copies of mcux private functions to prevent modifying mcux sdk. So
it won't be a problem when upgrading mcux sdk to upstream.

Signed-off-by: Aska Wu <aska.wu@linaro.org>

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -25,6 +25,13 @@ config RTC_QMSI
 	help
 	Build QMSI RTC driver.
 
+config RTC_MCUX
+	bool "MCUX RTC Driver"
+	depends on HAS_MCUX
+	default n
+	help
+	Build MCUX RTC driver.
+
 config RTC_0_NAME
 	string "Driver instance name"
 	default "RTC_0"
