--- a/dts/arm/nxp/nxp_k6x.dtsi
+++ b/dts/arm/nxp/nxp_k6x.dtsi
@@ -43,7 +43,7 @@
 			enable-external-reference;
 		};
 
-		rtc@4003d000 {
+		rtc: rtc@4003d000 {
 			compatible = "nxp,k64f-rtc";
 			reg = <0x4003d000 0x808>;
 			clock-frequency = <32768>;
