--- a/subsys/Makefile
+++ b/subsys/Makefile
@@ -10,3 +10,4 @@ obj-y += logging/
 obj-y += debug/
 obj-$(CONFIG_MCUBOOT_IMG_MANAGER) += dfu/
 obj-$(CONFIG_USERSPACE) += driver_handlers/
+obj-$(CONFIG_EPOCH_TIME) += time/
