--- a/samples/net/sockets/echo/prj.conf
+++ b/samples/net/sockets/echo/prj.conf
@@ -4,7 +4,7 @@ CONFIG_NEWLIB_LIBC=y
 # Networking config
 CONFIG_NETWORKING=y
 CONFIG_NET_IPV4=y
-CONFIG_NET_IPV6=n
+CONFIG_NET_IPV6=y
 CONFIG_NET_TCP=y
 CONFIG_NET_SOCKETS=y
 CONFIG_NET_SOCKETS_POSIX_NAMES=y
@@ -20,7 +20,13 @@ CONFIG_NET_APP_SETTINGS=y
 CONFIG_NET_APP_NEED_IPV4=y
 CONFIG_NET_APP_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_APP_PEER_IPV4_ADDR="192.0.2.2"
+CONFIG_NET_APP_MY_IPV6_ADDR="2001:db8::1"
+CONFIG_NET_APP_PEER_IPV6_ADDR="2001:db8::2"
 
 # Network debug config
 #CONFIG_NET_DEBUG_SOCKETS=y
-CONFIG_SYS_LOG_NET_LEVEL=2
+CONFIG_NET_LOG=y
+CONFIG_SYS_LOG_NET_LEVEL=4
+CONFIG_NET_DEBUG_CONTEXT=y
+CONFIG_NET_DEBUG_CORE=y
+CONFIG_NET_DEBUG_CONN=y
