--- a/subsys/CMakeLists.txt
+++ b/subsys/CMakeLists.txt
@@ -9,4 +9,5 @@ add_subdirectory_ifdef(CONFIG_FILE_SYSTEM          fs)
 add_subdirectory_ifdef(CONFIG_MCUBOOT_IMG_MANAGER  dfu)
 add_subdirectory_ifdef(CONFIG_NET_BUF              net)
 add_subdirectory_ifdef(CONFIG_USB                  usb)
+add_subdirectory(firmata)
 add_subdirectory(random)
